*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.8.2

* Codestriker can now sort by the column headers in the topic list
  view, from Jason Remilliard.

* It is now possible to create Subversion topics by entering values
  in the START_TAG, END_TAG and MODULE fields on the create topic
  page, from Jason Remilliard.  See the manual for more details.

* In addition to the existing Subversion HTTP server support, it is
  now possible to integrate with a native Subversion server as well,
  from Jason Remilliard.

* Codestriker can now parse basic diff files (non unidiff and context
  diff), and also ClearCase serial diffs.

* A ClearCase repository object has been written by Kannan Goundan
  which works off a snapshot view.  With the ClearCase serial diff
  parser mentioned in the previous item, this provides a
  fully-functional ClearCase code-reviewing solution.

* Topic property change emails didn't have the "References" and
  "In-Reply-To" mail headers set correctly, so that those emails
  weren't grouped into the same "topic" email thread.

* The view topic display has been improved for diffs which contain new
  files.  Now the entire width of the screen is used when displaying
  new files.  Fix from Jason Remilliard and Kannan Goundan.

* The email taint/input checking code has been tightened, from Jason
  Remilliard.

* Improved the input checking code on the topic properties page.

* The CVS pserver repository specification has been expanded so that
  it can accept extra optional arguments, such as:

  :pserver;proxy=abc.com;proxyport=8080:user:pwd@cvs.dev.net

* Modified Codestriker CSS so that monospace fonts use "monospace"
  rather than Courier so the user's settings in the browser are
  honoured, from Kannan Goundan.

Version 1.8.1

* Modified the filename field in the topicfile table back to 255