@@ -161,6 +161,13 @@ $LINE_BREAK_ASSIST_MODE = 2;
 
 $default_topic_br_mode = $LINE_BREAK_NORMAL_MODE;
 
+# When displaying a topic, if this value is -1, then all files in the
+# topic are displayed in the one page (default old Codestriker
+# behaviour).  If the value is 0, then only the first file is shown,
+# with links to display the other files.  This is useful for those
+# deployments that review a large amount of code.
+$default_file_to_view = -1;
+
 # List of valid topic states.  Note these values are mapped to the database
 # depending on their position in the list.  ie, Open -> 0, Closed -> 1, etc.
 # There is no problem added new states dynamically, or changing the textual
