@@ -70,7 +70,8 @@ sub process($) {
     $self->{filename} = $query->param('filename');
     $self->{linenumber} = $query->param('linenumber');
     $self->{mode} = $query->param('mode');
-    $self->{brmode} = $query->param('brmode');
+    $self->{brmode} = $query->param('brmode');  
+    $self->{fview} = $query->param('fview');
     $self->{bug_ids} = $query->param('bug_ids');
     $self->{new} = $query->param('new');
     $self->{tabwidth} = $query->param('tabwidth');
