@@ -47,28 +47,32 @@ sub new($$) {
 }
 
 # Create the URL for viewing a topic with a specified tabwidth.
-sub view_url_extended ($$$$$$$$) {
+sub view_url_extended ($$$$$$$$$$) {
     my ($self, $topic, $line, $mode, $tabwidth, $email, $prefix,
-	$updated, $brmode) = @_;
+	$updated, $brmode, $fview) = @_;
     if (!(defined $mode)) { $mode = $Codestriker::default_topic_create_mode; }
     if (!(defined $brmode)) { $brmode = $Codestriker::default_topic_br_mode; }
+    if (!(defined $fview)) { $fview = $Codestriker::default_file_to_view; }
+    
     return ($prefix ne "" ? $prefix : $self->{query}->url()) .
 	"?topic=$topic&action=view" .
 	($updated ? "&updated=$updated" : "") .
 	((defined $tabwidth && $tabwidth ne "") ? "&tabwidth=$tabwidth" : "") .
 	((defined $mode && $mode ne "") ? "&mode=$mode" : "") .
 	((defined $brmode && $brmode ne "") ? "&brmode=$brmode" : "") .
+	((defined $fview && $fview ne "") ? "&fview=$fview" : "") .
 	((defined $email && $email ne "") ? "&email=$email" : "") .
 	($line != -1 ? "#${line}" : "");
 }
 
 # Create the URL for viewing a topic.
-sub view_url ($$$$) {
-    my ($self, $topic, $line, $mode, $brmode) = @_;
+sub view_url ($$$$$$) {
+    my ($self, $topic, $line, $mode, $brmode, $fview) = @_;
     if (!(defined $mode)) { $mode = $Codestriker::default_topic_create_mode; }
     if (!(defined $brmode)) { $brmode = $Codestriker::default_topic_br_mode; }
+    if (!(defined $fview)) { $fview = $Codestriker::default_file_to_view; }
     return $self->view_url_extended($topic, $line, $mode, "", "", "",
-				    undef, $brmode);
+				    undef, $brmode, $fview);
 }
 
 # Create the URL for downloading the topic text.
