@@ -46,10 +46,7 @@ sub get ($$) {
     } elsif ($repository =~ /^\s*(https?:\/\/.*cvsweb\.cgi)\/*\s+(.*?)\/*\s*$/i) {
 	# CVS web repository.
 	return Codestriker::Repository::CvsWeb->new($1, $2);
-    } elsif ($repository =~ /^\s*svn:(https?:\/\/.*)\s*$/i) {
-	# webdav Subversion repository.
-	return Codestriker::Repository::Subversion->new($1);
-    } elsif ($repository =~ /^\s*svn:(svn?:\/\/.*)\s*$/i) {
+    } elsif ($repository =~ /^\s*svn:(.*)\s*$/i) {
 	# native Subversion repository.
 	return Codestriker::Repository::Subversion->new($1);
     } elsif ($repository =~ /^\s*perforce:(.*):(.*)@(.*):(.*)\s*$/i) {
